# sanic_sample

./: Dockerfile  pyproject.toml
src/sanic_sample/: app.py
tests/: test_sanic_sample.py
