[tool.poetry]
name = "sanic_sample"
version = "0.1.0"
description = ""
authors = ["Kazuya Hayashi <pumpkin.brownies@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
sanic = "^21.9.0"
gunicorn = "^20.1.0"

[tool.poetry.dev-dependencies]
pytest = "^4.6"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
